--- a/package.json
+++ b/package.json
@@ -16,23 +16,37 @@
     "@deck.gl/layers": "^9.1.3",
     "@deck.gl/mapbox": "^9.1.3",
     "@deck.gl/react": "^9.1.3",
-    "@loaders.gl/core": "^4.3.3",
-    "@loaders.gl/flatgeobuf": "^4.3.3",
-    "@loaders.gl/gis": "^4.3.3",
-    "@loaders.gl/json": "^4.3.3",
-    "@loaders.gl/mvt": "^4.3.3",
-    "@loaders.gl/parquet": "^4.3.3",
-    "@loaders.gl/pmtiles": "^4.3.3",
-    "@mapbox/vector-tile": "^2.0.3",
-    "@maticoapp/deck.gl-pmtiles": "^0.0.33",
+    "@duckdb/duckdb-wasm": "^1.29.0",
+    "@geoarrow/deck.gl-layers": "^0.3.0",
+    "@geoarrow/geoparquet-wasm": "^0.2.0-beta.5",
     "@radix-ui/colors": "^3.0.0",
+    "@radix-ui/react-accordion": "^1.2.3",
+    "@radix-ui/react-alert-dialog": "^1.1.6",
+    "@radix-ui/react-aspect-ratio": "^1.1.2",
     "@radix-ui/react-avatar": "^1.1.3",
+    "@radix-ui/react-checkbox": "^1.1.4",
     "@radix-ui/react-collapsible": "^1.1.3",
+    "@radix-ui/react-context-menu": "^2.2.6",
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
+    "@radix-ui/react-hover-card": "^1.1.6",
+    "@radix-ui/react-label": "^2.1.2",
+    "@radix-ui/react-menubar": "^1.1.6",
+    "@radix-ui/react-navigation-menu": "^1.2.5",
+    "@radix-ui/react-popover": "^1.1.6",
+    "@radix-ui/react-progress": "^1.1.2",
+    "@radix-ui/react-radio-group": "^1.2.3",
+    "@radix-ui/react-scroll-area": "^1.2.3",
+    "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-slider": "^1.2.3",
     "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-switch": "^1.1.3",
+    "@radix-ui/react-tabs": "^1.1.3",
+    "@radix-ui/react-toast": "^1.2.6",
+    "@radix-ui/react-toggle": "^1.1.2",
+    "@radix-ui/react-toggle-group": "^1.1.2",
+    "@radix-ui/react-toolbar": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.8",
     "@reduxjs/toolkit": "^2.5.1",
     "@types/d3-quadtree": "^3.0.6",
@@ -43,22 +57,19 @@
     "clsx": "^2.1.1",
     "d3-quadtree": "^3.0.1",
     "deck.gl": "^9.1.3",
-    "flatgeobuf": "^3.37.1",
     "framer-motion": "^12.4.7",
     "lodash": "^4.17.21",
     "lucide-react": "^0.475.0",
     "maplibre-gl": "^5.1.0",
     "next": "15.1.7",
     "next-themes": "^0.4.4",
-    "parquetjs-lite": "^0.8.7",
-    "pmtiles": "^4.3.0",
+    "parquet-wasm": "^0.6.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-map-gl": "^8.0.1",
     "react-redux": "^9.2.0",
     "tailwind-merge": "^3.0.1",
-    "tailwindcss-animate": "^1.0.7",
-    "vt-pbf": "^3.1.3"
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
